--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
   <meta http-equiv="refresh" content="0;../programming/">
-    <title>Leonardas.pro</title>
+    <title>Leonardasf1.github.io</title>
   <link rel="SHORTCUT ICON" href="CSS/favicon.ico">
   <link rel="stylesheet" href="CSS/leonardasf1.css">
 <style>
@@ -23,7 +23,7 @@
   <header>
     <div id="headerMenu">
       <div>
-        <span class="prelogo">leonardas.pro</span>
+        <span class="prelogo">Leonardasf1.github.io</span>
       </div>
     </div>
   </header>
