--- a/programming/index.html
+++ b/programming/index.html
@@ -17,7 +17,7 @@ li {
     display: flex;
     flex-wrap: wrap;
 }
-.primery a {
+.primery a, .flex > * {
     margin: 3px;
     flex: 1 1 auto;
     padding: 5px;
