--- a/programming/react.html
+++ b/programming/react.html
@@ -62,13 +62,14 @@
         		</ul>
         	</div>
         	<div>
-        		<a href="https://itvdn.com/ru/video/isomorphic-application">Изоморфные приложения на React</a>
+				<a href="https://itvdn.com/ru/video/isomorphic-application">Изоморфные приложения на React</a><br>
+				<a href="https://youtu.be/1kopPz0Fhlk">Первое веб-приложение с React.JS (2019)</a><br>
+				<a href="https://www.youtube.com/watch?v=riRrKFkbS-g&list=PLVfMKQXDAhGVCB401FJhb4HC6tAMe5YdL"> Уроки React Js для новичков (Web Developer Blog.2017)</a><br>
         	</div>
         </article>
         <article>
         	<br>
             плагин для sublimeText/packageControl/install/babel<br>
-            <a href="https://www.youtube.com/watch?v=riRrKFkbS-g&list=PLVfMKQXDAhGVCB401FJhb4HC6tAMe5YdL"> Уроки React Js для новичков (Web Developer Blog)</a><br>
             
         </article>
 </body>
