--- a/programming/index.html
+++ b/programming/index.html
@@ -17,7 +17,7 @@ li {
     display: flex;
     flex-wrap: wrap;
 }
-.primery a, .flex > * {
+.primery a{
     margin: 3px;
     flex: 1 1 auto;
     padding: 5px;
@@ -32,6 +32,8 @@ li {
 #python:hover {
     text-shadow: none;
 }
+h2 {margin-top: 0px}
+
     </style>
 
     <script src="../JS/jquery.js"></script>
@@ -134,13 +136,15 @@ li {
 
 <div>
     <h2>Hosting / Domain</h2>
-    <li><img src="https://htmlacademy.ru/favicon.svg" height="16px"><a href="https://htmlacademy.ru/blog/useful/programming/how-to-register-domain">how-to-register-domain</a></li>
-    <li><img src="https://www.internic.net/touch/apple-touch-icon-57x57.png" height="16px"> <a href="https://www.internic.net/alpha.html">InterNIC - Registrar List</a></li>
+    <ul>
+    <li><img src="https://htmlacademy.ru/favicon.svg"><a href="https://htmlacademy.ru/blog/useful/programming/how-to-register-domain">how-to-register-domain</a></li>
+    <li><img src="https://www.internic.net/touch/apple-touch-icon-57x57.png"> <a href="https://www.internic.net/alpha.html">InterNIC - Registrar List</a></li>
     <li><img src="https://www.moniker.com/assets/ico/favicon-16x16.png" alt=""> <a href="https://www.moniker.com/">moniker.com</a></li>
     <li><img src="https://img1.wsimg.com/ux/favicon/favicon-16x16.svg" alt=""> <a href="https://www.godaddy.com/">godaddy.com</a></li>
     <li><img src="https://a0.awsstatic.com/main/images/site/fav/favicon.ico" alt=""><a href="https://aws.amazon.com/ru/websites/">aws.amazon</a></li>
-    <img src="https://www.namecheap.com/assets/img/nc-icon/namecheap-icon-72x72.png" height="16px"> <a href="https://www.namecheap.com">namecheap.com</a><br>
-    <li><a href="https://gpdhost.com"><img src="https://gpdhost.com/images/favicon/favicon-32x32.png" height="16px"> gpdhost</a></li>
+    <img src="https://www.namecheap.com/assets/img/nc-icon/namecheap-icon-72x72.png"> <a href="https://www.namecheap.com">namecheap.com</a><br>
+    <li><a href="https://gpdhost.com"><img src="https://gpdhost.com/images/favicon/favicon-32x32.png"> gpdhost</a></li>
+    </ul>
 </div>
 
 <div>
@@ -173,8 +177,8 @@ module.exports = {
 </div>
 
 <div>
-    <h2>Git</h2>
-    <a href="https://git-scm.com/book/ru/v1/Основы-Git"><img src="https://git-scm.com/favicon.ico"> git-scm.com/book/</a><br>
+    <h2><img src="https://git-scm.com/favicon.ico"> Git</h2>
+    <a href="https://git-scm.com/book/ru/v1/Основы-Git">git-scm.com/book/</a><br>
     <a href="https://youtu.be/nRXacgNHNVw">GIT-практикум (ITVDN)</a><br>
     <a href="https://youtu.be/yDSs80lu3ak">Git — инструмент для совместной работы, с нуля и до регламента в команде — Сергей Сергеев</a><br>
     <a href="https://youtu.be/iQqDce_9y3k">Как пользоваться GIT в Phpstorm. Инструкция</a><br>
@@ -273,7 +277,7 @@ create .gitignore /tmp
     <li><a href="https://epicurrence.com">epicurrence.com</a></li>
 </div>
 
-<ul>
+<div><ul>
     <li>browserslist</li>
     <li>WebAuthn / WebAssembly</li>
     <li><a href="https://github.com/tehcookies/bundlers-comparison">Bundlers</a>: <a href="https://www.youtube.com/watch?v=Tg8IVbvturM">Webpack</a>, Parcel, Rollup</li>
@@ -309,8 +313,9 @@ create .gitignore /tmp
     <li><a href="https://ru.hexlet.io">ru.hexlet.io</a></li>
     <li><a href="https://www.coderbyte.com">coderbyte.com</a></li>
     <li><a href="https://itvdn.com/ru/blog/article/dev-games">Игры для тренировки навыков программирования</a></li>
+    </ul>
     sublimeText: .container>.header(>h1{Hello W})+.content>ul>li*5({item$}) <br>
-</ul>
+</div>
 
 </div>
 
