--- a/programming/index.html
+++ b/programming/index.html
@@ -60,13 +60,6 @@ h2 {margin-top: 0px}
         <a href="https://codepen.io"><img src="https://static.codepen.io/assets/favicon/logo-pin-8f3771b1072e3c38bd662872f6b673a722f4b3ca2421637d5596661b4e2132cc.svg" alt="codepen"></a>
         <a href="https://jsfiddle.net/"><img src="http://jsfiddle.net/img/favicon.png" alt="jsfiddle.net"></a>
         <a href="https://ideone.com"><img src="https://ideone.com/gfx2/img/favicon.png" alt="ideone"></a>
-        <a href="https://git-scm.com/book/ru/v2"><img src="https://git-scm.com/favicon.ico" alt="Git"></a>
-        <a href="https://www.jetbrains.com/phpstorm/documentation/phpstorm-video-tutorials.html"><img src="https://www.jetbrains.com/safari-pinned-tab.svg" alt="jetbrains"></a>
-        <a href="https://www.sublimetext.com"><img src="https://www.sublimetext.com/favicon.ico" alt="Sublime Text"></a>
-        <a href="https://www.sublimemerge.com/"><img src="https://www.sublimemerge.com/favicon.ico" alt="sublimemerge"></a>
-        <a href="https://validator.w3.org/nu/#textarea">validator.w3</a>
-        <a href="http://citforum.ru/">citforum.ru</a>
-        <a href="https://highlightjs.org/">highlightjs</a>
     </div>
 
     <nav>
@@ -135,125 +128,6 @@ h2 {margin-top: 0px}
 </div>
 
 <div>
-    <h2>Hosting / Domain</h2>
-    <ul>
-    <li><img src="https://htmlacademy.ru/favicon.svg"><a href="https://htmlacademy.ru/blog/useful/programming/how-to-register-domain">how-to-register-domain</a></li>
-    <li><img src="https://www.internic.net/touch/apple-touch-icon-57x57.png"> <a href="https://www.internic.net/alpha.html">InterNIC - Registrar List</a></li>
-    <li><img src="https://www.moniker.com/assets/ico/favicon-16x16.png" alt=""> <a href="https://www.moniker.com/">moniker.com</a></li>
-    <li><img src="https://img1.wsimg.com/ux/favicon/favicon-16x16.svg" alt=""> <a href="https://www.godaddy.com/">godaddy.com</a></li>
-    <li><img src="https://a0.awsstatic.com/main/images/site/fav/favicon.ico" alt=""> <a href="https://aws.amazon.com/ru/websites/">aws.amazon</a></li>
-    <li><svg xmlns="http://www.w3.org/2000/svg" version="1.1" style="width:16px; height:16px; display:block;">
-        <rect width="8" height="8" style="fill: #F25022; stroke-width: .2; stroke: black"></rect>
-        <rect width="8" height="8" style="fill: #7FBA00; stroke-width: .2; stroke: black" x="8"></rect>
-        <rect width="8" height="8" style="fill: #FFB900; stroke-width: .2; stroke: black" x="8" y="8"></rect>
-        <rect width="8" height="8" style="fill: #00A4EF; stroke-width: .2; stroke: black" y="8"></rect>
-    </svg> <a href="https://azure.microsoft.com/ru-ru/">Microsoft Azure</a></li>
-    <img src="https://www.namecheap.com/assets/img/nc-icon/namecheap-icon-72x72.png" height="16px"> <a href="https://www.namecheap.com">namecheap.com</a><br>
-    <li><a href="https://gpdhost.com"><img src="https://gpdhost.com/images/favicon/favicon-32x32.png" height="16px"> gpdhost</a></li>
-</div>
-
-<div>
-    <h2><a href="https://ru.wikipedia.org/wiki/TypeScript">TypeScript</a></h2>
-    <li><a href="https://youtu.be/bSoIeNo-aiw"> Видеокурс TypeScript Fundamentals. (ITVDN)</a></li>
-
-    <h2>Java</h2>
-    <ul>
-        <a href="http://www.jetbrains.com/idea/"><img src="http://www.jetbrains.com/favicon-16x16.png" alt=""> IntelliJ IDEA</a><br>
-        <a href="https://www.oracle.com/technetwork/java/javase/downloads/index.html">Java Development Kit</a><br>
-    </ul>
-    <h2>Terminal</h2>
-</div>
-
-<div>
-    <h2>Node.js</h2>
-    <li><a href="https://ru.wikipedia.org/wiki/Node.js">Node.wiki</a> , <a href="https://nodejs.org/en/">nodejs.org</a></li>
-    <pre>
-require('./name')
-global.name = name; // делает переменную глобальной
-module.exports.name = name;
-module.exports = {
-    name : name,
-    name1 : name1
-};
-.on('event', func);
-.addListener('event', func);
-.once('event', func);  // обработчик сработает один раз
-    </pre>
-</div>
-
-<div>
-    <h2><img src="https://git-scm.com/favicon.ico"> Git</h2>
-    <a href="https://git-scm.com/book/ru/v1/Основы-Git">git-scm.com/book/</a><br>
-    <a href="https://youtu.be/nRXacgNHNVw">GIT-практикум (ITVDN)</a><br>
-    <a href="https://youtu.be/yDSs80lu3ak">Git — инструмент для совместной работы, с нуля и до регламента в команде — Сергей Сергеев</a><br>
-    <a href="https://youtu.be/iQqDce_9y3k">Как пользоваться GIT в Phpstorm. Инструкция</a><br>
-    <a href="https://www.youtube.com/playlist?list=PLIU76b8Cjem5B3sufBJ_KFTpKkMEvaTQR">Базовый курс по Git (devcolibri)</a><br>
-    <a href="https://youtu.be/nHjKXiRLAQY">PhpStorm + Git + GitHub - Настройка контроля версий</a><br>
-	<pre>git --help
-usage: git [--version] [--help] [-C < path>] [-c < name>=< value>] 
-	   [--exec-path[=< path>]] [--html-path] [--man-path] [--info-path]
-	   [-p | —paginate | -P | —no-pager] [--no-replace-objects] [--bare] 
-	   [--git-dir=< path>] [--work-tree=< path>] [--namespace=< name>] 
-	   < command> [< args>] 
-
-These are common Git commands used in various situations: 
-
-start a working area (see also: git help tutorial) 
-	clone	Clone a repository into a new directory 
-	init	Create an empty Git repository or reinitialize an existing one 
-
-work on the current change (see also: git help everyday) 
-	add 	Add file contents to the index 
-	mv 	Move or rename a file, a directory, or a symlink 
-	restore Restore working tree files 
-	rm 	Remove files from the working tree and from the index 
-
-examine the history and state (see also: git help revisions) 
-	bisect 	Use binary search to find the commit that introduced a bug
-	diff 	Show changes between commits, commit and working tree, etc 
-	grep 	Print lines matching a pattern 
-	log 	Show commit logs 
-	show 	Show various types of objects 
-	status 	Show the working tree status 
-
-grow, mark and tweak your common history 
-	branch 	List, create, or delete branches 
-	commit 	Record changes to the repository 
-	merge 	Join two or more development histories together 
-	rebase 	Reapply commits on top of another base tip 
-	reset 	Reset current HEAD to the specified state 
-	switch 	Switch branches 
-	tag 	Create, list, delete or verify a tag object signed with GPG 
-
-collaborate (see also: git help workflows) 
-	fetch 	Download objects and refs from another repository 
-	pull 	Fetch from and integrate with another repository or a local branch 
-	push 	Update remote refs along with associated objects 
-
-'git help -a' and 'git help -g' list available subcommands and some
-concept guides. See 'git help < command>' or 'git help < concept>'
-to read about a specific subcommand or concept. 
-See 'git help git' for an overview of the system.
-	git config --list
-	git config —global user.name "John Doe" 
-	git config —global user.email johndoe@example.com
-	
-	cd E:  // переходим на нужный диск
-	cd example  // в нужную папку
-	git init  // инициализируем репозиторий
-	git status  // проверяем
-create .gitignore /tmp 
-	git add . // добавляем все в staged area
-	git restore --staged index.html  // убираем файл из staged area
-	git commit -m'комментарий'  // и в мастер ветку
-	git log -2  // показывает два последних коммита
-	git commit -a -m''  // делает сразу add и commit
-	git log -p  // просмотреть разницу
-	enter  //  чтобы продолжить работу
-</pre>
-</div>
-
-<div>
     <h2>design</h2>
     <ul>
         <li><a href="https://www.gimp.org/">gimp.org</a></li>
@@ -273,6 +147,105 @@ create .gitignore /tmp
 </div>
 
 <div>
+    <h2>Hosting / Domain</h2>
+    <ul>
+    <li><svg version="1.1" xmlns="http://www.w3.org/2000/svg" height="25px" viewBox="0 0 22 35">
+        <polygon fill="#717272" points="8.2,26.3 -0.1,34.8 -0.1,18.1 8.2,9.6"/>
+        <polygon fill="#C25D28" points="17.8,16.7 9.4,25.2 9.4,8.4 17.8,0"/>
+    </svg> <a href="https://itvdn.com/ru/video/sitepublication">Публикация веб-сайта</a></li>
+    <li><img src="https://htmlacademy.ru/favicon.svg"> <a href="https://htmlacademy.ru/blog/useful/programming/how-to-register-domain">how-to-register-domain</a></li>
+    <li><img src="https://www.internic.net/touch/apple-touch-icon-57x57.png"> <a href="https://www.internic.net/alpha.html">InterNIC - Registrar List</a></li>
+    <li><img src="https://www.moniker.com/assets/ico/favicon-16x16.png" alt=""> <a href="https://www.moniker.com/">moniker.com</a></li>
+    <li><img src="https://img1.wsimg.com/ux/favicon/favicon-16x16.svg" alt=""> <a href="https://www.godaddy.com/">godaddy.com</a></li>
+    <li><img src="https://a0.awsstatic.com/main/images/site/fav/favicon.ico" alt=""> <a href="https://aws.amazon.com/ru/websites/">aws.amazon</a></li>
+    <li><svg xmlns="http://www.w3.org/2000/svg" version="1.1" style="width:16px; height:16px;">
+        <rect width="8" height="8" style="fill: #F25022; stroke-width: .2; stroke: black"></rect>
+        <rect width="8" height="8" style="fill: #7FBA00; stroke-width: .2; stroke: black" x="8"></rect>
+        <rect width="8" height="8" style="fill: #FFB900; stroke-width: .2; stroke: black" x="8" y="8"></rect>
+        <rect width="8" height="8" style="fill: #00A4EF; stroke-width: .2; stroke: black" y="8"></rect>
+    </svg> <a href="https://azure.microsoft.com/ru-ru/">Microsoft Azure</a></li>
+    <img src="https://www.namecheap.com/assets/img/nc-icon/namecheap-icon-72x72.png" height="16px"> <a href="https://www.namecheap.com">namecheap.com</a><br>
+    <li><a href="https://gpdhost.com"><img src="https://gpdhost.com/images/favicon/favicon-32x32.png" height="16px"> gpdhost</a></li>
+</div>
+
+<div>
+    <h2><img src="https://git-scm.com/favicon.ico"> Git</h2>
+    <a href="https://git-scm.com/book/ru/v2">git-scm.com/book/</a><br>
+    <a href="https://www.youtube.com/playlist?list=PLIU76b8Cjem5B3sufBJ_KFTpKkMEvaTQR">Базовый курс по Git (devcolibri. 2016)</a><br>
+    <a href="https://youtu.be/PEKN8NtBDQ0">Git - для новичков (loftblog. 2015)</a><br>
+    <a href="https://youtu.be/yDSs80lu3ak">Git — с нуля и до регламента в команде (Сергей Сергеев. 2018)</a><br>
+    <a href="https://youtu.be/nRXacgNHNVw">GIT-практикум (ITVDN)</a><br>
+    <a href="https://youtu.be/iQqDce_9y3k">Как пользоваться GIT в Phpstorm. Инструкция</a><br>
+    <a href="https://youtu.be/nHjKXiRLAQY">PhpStorm + Git + GitHub - Настройка контроля версий</a><br>
+	<pre><details><summary>git --help</summary><div>
+usage: git [--version] [--help] [-C < path>] [-c < name>=< value>] 
+	   [--exec-path[=< path>]] [--html-path] [--man-path] [--info-path]
+	   [-p | —paginate | -P | —no-pager] [--no-replace-objects] [--bare] 
+	   [--git-dir=< path>] [--work-tree=< path>] [--namespace=< name>] 
+	   < command> [< args>] 
+
+These are common Git commands used in various situations: 
+
+    git config —global user.name "John Doe" 
+    git config —global user.email johndoe@example.com
+
+start a working area (see also: git help tutorial) 
+	git clone url	// Clone a repository into a new directory 
+	git init	// Create an empty Git repository or reinitialize an existing one 
+
+work on the current change (see also: git help everyday) 
+	git add . //	Add file contents to the index 
+	mv 	Move or rename a file, a directory, or a symlink 
+	restore Restore working tree files 
+	rm 	Remove files from the working tree and from the index 
+
+examine the history and state (see also: git help revisions) 
+	bisect 	Use binary search to find the commit that introduced a bug
+	diff 	Show changes between commits, commit and working tree, etc 
+	grep 	Print lines matching a pattern 
+    git log -2  // показывает два последних коммита
+    git log -p  // просмотреть разницу
+	show 	Show various types of objects 
+    git status  // проверяем
+
+grow, mark and tweak your common history 
+	git branch 	List, create, or delete branches 
+    git commit -m'комментарий'
+    git commit -a -m''  // делает сразу add и commit
+	git merge branch2  // слияние в настоящую ветку ветки branch2
+	git rebase branch2  //  	Reapply commits on top of another base tip 
+	reset 	Reset current HEAD to the specified state 
+	switch 	Switch branches 
+	tag 	Create, list, delete or verify a tag object signed with GPG 
+
+collaborate (see also: git help workflows) 
+    git fetch 	Download objects and refs from another repository 
+    git pull origin branch2 // скачиваем из удаленного репозитория отсутствующие у нас изменения
+    git pull --rebase
+    git push origin master	// загружаем в удаленный репозиторий в мастер-ветку
+
+'git help -a' and 'git help -g' list available subcommands and some
+concept guides. See 'git help < command>' or 'git help < concept>'
+to read about a specific subcommand or concept. 
+See 'git help git' for an overview of the system.
+	git config --list
+	
+create .gitignore /tmp 
+	git restore --staged index.html  // убираем файл из staged area
+    git checkout hash  // возвращение к определенному коммиту
+    git checkout master  // переключение на ветку мастер
+    git checkout -b newbranch  // создание новой ветки с переключением на неё
+    git revert HEAD --no-edit  // удаление последнего коммита
+    git revert --abort  // отменяем если возник конфликт
+
+    git stash  // сохраняем working dir перед pull
+    git stash pop
+    git stash list
+</div></details>
+</pre>
+</div>
+
+<div>
     <li><a href="https://veryberry.com.ua">veryberry.com.ua</a></li>
     <li><a href="https://www.nitrousa.com">nitrousa.com</a></li>
     <li><a href="https://www.svo.aero/">svo.aero</a></li>
@@ -285,7 +258,6 @@ create .gitignore /tmp
 <div><ul>
     <li>browserslist</li>
     <li>WebAuthn / WebAssembly</li>
-    <li><a href="https://github.com/tehcookies/bundlers-comparison">Bundlers</a>: <a href="https://www.youtube.com/watch?v=Tg8IVbvturM">Webpack</a>, Parcel, Rollup</li>
     <li>unit-тесты , e2e-тесты</li>
     <li>CI/CD</li>
     <li>скрамы, канбаны, стендапы, парное программирование</li>
@@ -294,10 +266,8 @@ create .gitignore /tmp
     <li>sonarJS</li>
     <li>Next.js / Gatsby.js / Nest.js</li>
     <li><a href="https://cdnjs.com">cdnjs.com</a></li>
-    <li><a href="https://codekitapp.com/">CodeKit</a>, Visual Studio Code</li>
     <li><a href="https://vk.com/doc41637949_513701117">code complete Стива Макконнела. 2010</a></li>
     <li>Axure</li>
-    <a href="https://jetbrains.ru/products/phpstorm/">jetbrains.ru</a><br>
     SSH
     <li><a href="https://ru.wikipedia.org/wiki/Объектно-ориентированное_программирование">ООП</a></li>
     <li><a href="https://electronjs.org/">electronjs</a></li>
@@ -318,12 +288,65 @@ create .gitignore /tmp
     <li><a href="https://ru.hexlet.io">ru.hexlet.io</a></li>
     <li><a href="https://www.coderbyte.com">coderbyte.com</a></li>
     <li><a href="https://itvdn.com/ru/blog/article/dev-games">Игры для тренировки навыков программирования</a></li>
+    <li><a href="https://validator.w3.org/nu/#textarea">validator.w3</a></li>
+    <li><a href="http://citforum.ru/">citforum.ru</a></li>
+    <li><a href="https://highlightjs.org/">highlightjs</a></li>
     </ul>
+</div>
+
+<div>
+    <h2>инструменты</h2>
+    <ul>
+        <li><a href="https://www.sublimetext.com"><img src="https://www.sublimetext.com/favicon.ico" alt="Sublime Text"> Sublime Text</a></li>
+        <li><a href="https://www.sublimemerge.com/"><img src="https://www.sublimemerge.com/favicon.ico" alt="sublimemerge"> Sublime Merge</a></li>
     sublimeText: .container>.header(>h1{Hello W})+.content>ul>li*5({item$}) <br>
+        <li><a href="https://www.jetbrains.com/phpstorm/documentation/phpstorm-video-tutorials.html"><img src="https://www.jetbrains.com/safari-pinned-tab.svg" alt="jetbrains"> jetbrains.com</a> <a href="https://jetbrains.ru/products/phpstorm/">jetbrains.ru</a></li>
+        <li><a href="https://codekitapp.com/">CodeKit</a></li>
+        <li>Visual Studio Code</li>
+        <li><img src="https://git-scm.com/favicon.ico"> <a href="https://git-scm.com/">Git</a></li>
+        <li><img src="https://nodejs.org/static/images/favicons/favicon-16x16.png" alt=""> <a href="https://nodejs.org/en/">Node.js</a></li>
+        <li><a href="https://github.com/tehcookies/bundlers-comparison">Bundlers</a>: <a href="https://www.youtube.com/watch?v=Tg8IVbvturM">Webpack</a>, Parcel, Rollup</li>
+    </ul>
+</div>
+
+<div>
+    <h2><a href="https://ru.wikipedia.org/wiki/TypeScript">TypeScript</a></h2>
+    <li><a href="https://youtu.be/bSoIeNo-aiw"> Видеокурс TypeScript Fundamentals. (ITVDN)</a></li>
+
+    <h2>Java</h2>
+    <ul>
+        <a href="http://www.jetbrains.com/idea/"><img src="http://www.jetbrains.com/favicon-16x16.png" alt=""> IntelliJ IDEA</a><br>
+        <a href="https://www.oracle.com/technetwork/java/javase/downloads/index.html">Java Development Kit</a><br>
+    </ul>
+    <h2>Terminal</h2>
+    <pre>
+    cd E:  // переходим на нужный диск
+    cd example  // в нужную папку
+    mkdir folder  // создаем папку
+    ls  // смотреть содержимое папки
+    </pre>
+</div>
+
+<div>
+    <a href="https://nodejs.org/en/"><img height="70px" src="https://nodejs.org/static/images/logo.svg" alt="Node.js"></a>
+    <li><a href="https://ru.wikipedia.org/wiki/Node.js">Node.wiki</a></li>
+    <li><a href="https://itvdn.com/ru/video/node_js">Уроки Node.js</a></li>
+    <pre>
+require('./name')
+global.name = name; // делает переменную глобальной
+module.exports.name = name;
+module.exports = {
+    name : name,
+    name1 : name1
+};
+.on('event', func);
+.addListener('event', func);
+.once('event', func);  // обработчик сработает один раз
+    </pre>
 </div>
 
 </div>
-
+<br><br><br>
     <article class="primery">
         <a href="https://codepen.io/leonardasf1/pen/QegKyX/">video-playerJS</a>
         <a href="primery/hcs-1.html">hcs-1</a>
