--- a/programming/css.html
+++ b/programming/css.html
@@ -283,7 +283,7 @@ text-transform: capitalize | lowercase | uppercase | none;
 
 white-space: normal | nowrap | pre | pre-line | pre-wrap; пробелы и переносы
 word-break: normal | break-all | keep-all; перенос слова
-word-spacing: 10px; рассстояние между словами
+word-spacing: 10px; расстояние между словами
 word-wrap: normal | break-word; переносить слова
 
 direction: ltr | rtl;  направление текста
@@ -481,7 +481,7 @@ sel[атрибут] для элемента с атрибутом
     a:visited:hover
 
 :first-child {} когда селектор - 1й дочерний элемент
-:last-child {} когда селектор - последнийй дочерний элемент
+:last-child {} когда селектор - последний дочерний элемент
 :first-of-type {} когда селектор - первый своего типа
 :last-of-type {} когда селектор - последний своего типа
 :nth-child(2n) четные элементы
